Experimenting fixes for Props table scrolling bug on mobile devices.

--- a/src/styles/Badges.css
+++ b/src/styles/Badges.css
@@ -26,8 +26,6 @@
     width: 85vw;
     margin-bottom: 2em;
     overflow-x: scroll;
-    overflow-y: visible;
-    min-height: 100%;
     height: 100%;
 }
 
@@ -108,13 +106,17 @@
     margin: .5em 0 -.3em 0;
 }
 
-.props-container h4,
-.props-container p {
+.props-container .props-header,
+.props-container .props-cell {
     margin: 0 !important;
     display: flex;
     height: 100%;
     justify-content: center;
     align-items: center;
+}
+
+.props-container .props-cell {
+    color: #b3bec9;
 }
 
 .badges-page-container p {
